--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "react-scripts build",
     "start": "react-scripts start"
   },
+  "proxy": "http://localhost:3200/",
   "keywords": [],
   "author": "",
   "license": "ISC",
